<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.BenevoleReg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#cccccc">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ed1"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffff"
                android:hint="@string/nom"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#cccccc"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#cccccc">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ed2"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffff"
                android:hint="@string/pr_nom"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#cccccc"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#cccccc">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ed3"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffff"
                android:hint="@string/profession"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#cccccc"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#cccccc">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ed4"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffff"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#cccccc"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btx333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#79a209df"
            android:text="@string/ajouter"
            android:textColor="#cccccc" />

        <ProgressBar
            android:id="@+id/progressBarBenevole"
            style="?android:attr/progressBarStyle"
            android:layout_width="93dp"
            android:layout_height="62dp"
            android:indeterminateTint="@color/cardview_light_background"
            android:visibility="invisible" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>